# ludo-zk

./: Cargo.toml  README.md  play_receipt.proof  play_receipt.pub  receipt_inner.hex
aligned/: Cargo.toml
aligned/src/: main.rs
api/: Cargo.toml
api/src/: main.rs  server.rs  types.rs
api/src/routes/: handlers.rs
core/: Cargo.toml
core/src/: lib.rs
host/: Cargo.toml
host/src/: lib.rs  main.rs  players.rs
methods/guest/: Cargo.toml
